# fake_rpi

./: .gitignore  .travis.yml  CHANGELOG.md  example.py  pyproject.toml  readme.md  requirements.txt  setup.py  travis.yml
fake_rpi/: Adafruit.py  Base.py  RPi.py  __init__.py  nxp_imu.py  picamera.py  serial.py  smbus.py  wrappers.py
tests/: test_fake_rpi.py
