[tool.poetry]
name = "fake_rpi"
version = "0.6.4"
description = "Fake Raspberry Pi programming interfaces for development or unit testing"
authors = ["ycbayrak <ycbayrak@users.noreply.github.com>"]
license = "MIT"
repository = 'https://github.com/ycbayrak/fake_rpi'
keywords = ['raspberry', 'pi', 'fake', 'fake_rpi', 'i2c', 'spi', 'gpio', 'serial', 'picamera']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

[tool.poetry.dependencies]
python = ">=3.5"
numpy = "*"
# pyserial = "^3.4"
# colorama = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
